--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,12 +13,13 @@ $primary: #0071bb;
 $secondary: #3b9345;
 $tertiary: #f5821f;
 $quaternary: #6dbb45;
-$success: #4caf50;
-$info: #c62828;
-$warning: #ffb300;
-$danger: #00a0c6;
-$light: #f4f8fb;
-$dark: #1a2a33;
+
+$success:    #198754;
+$info:       #0dcaf0;
+$warning:    #ffc107;
+$danger:     #dc3545;
+$light:      #f8f9fa;
+$dark:       #212529;
 
 // 2. Extend Bootstrap theme colors map
 $theme-colors: (
